Separate into modules

--- a/ConsoleApplication1/ConsoleApplication1.fsproj
+++ b/ConsoleApplication1/ConsoleApplication1.fsproj
@@ -55,6 +55,9 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SimpleParser.fs" />
+    <Compile Include="ComplexParser.fs" />
+    <Compile Include="CustomParser.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <None Include="packages.config" />
